# authentication

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  start.sh
.github/workflows/: ci.yml  google-cloudrun-docker.yml
jwks/: jwks.json
migrations/2025-04-04-172752_create_users/: up.sql
migrations/2025-04-11-094300_create_refresh_tokens/: down.sql  up.sql
migrations/2025-04-11-154232_create_user_email_index/: down.sql  up.sql
migrations/2025-05-01-144032_add_refresh_token_issued_at/: down.sql  up.sql
migrations/2025-05-18-025615_update_user_model/: down.sql  up.sql
src/: db.rs  errors.rs  handlers.rs  main.rs  schema.rs  tests.rs
src/errors/: jwt.rs  users.rs
src/interfaces/: users.rs
src/models/: jwt.rs  users.rs
src/repository/: jwt.rs  users.rs
src/services/: users.rs
src/services/jwt/: mod.rs
src/services/jwt/signing/: es256.rs  hs256.rs  mod.rs  rs256.rs
test_resources/: dummy.pem
